Stylizer 2.0.30 - Implement support for Java 17 and Minecraft 1.18

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,9 +5,11 @@ description: ${project.description}
 main: ${main.class}
 author: ${pl.author}
 
+depend:
+  - Vault
+
 softdepend:
   - PlaceholderAPI
-  - Vault
 
 commands:
   stylizer:
