--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <groupId>me.omegaweapondev</groupId>
   <artifactId>stylizer</artifactId>
   <name>Stylizer</name>
-  <version>2.0.29</version>
+  <version>2.0.30</version>
   <description>Stylize different aspects of the server!</description>
 
   <!--
@@ -41,14 +41,14 @@
     <pl.apiver>1.13</pl.apiver>
 
     <!-- The Java version your plugin uses, see bstats.org for what most servers have and use that -->
-    <java.version>16</java.version>
+    <java.version>17</java.version>
 
     <!-- How letters in your code should be saved on your disk, leave to UTF-8 to support all languages -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Used to force the compiler to use Java JDK 1.8. Can be left out if the IDE has been setup correctly. -->
-    <maven.compiler.source>16</maven.compiler.source>
-    <maven.compiler.target>16</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <pluginRepositories>
@@ -100,10 +100,10 @@
     -->
     <dependency>
       <groupId>org.spigotmc</groupId>
-      <artifactId>spigot-api</artifactId>
+      <artifactId>spigot</artifactId>
 
       <!-- Change this to the latest version to stay up to date -->
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <version>1.18-R0.1-SNAPSHOT</version>
 
       <!--
         The scope indicates if this library should be packaged together with our plugin
@@ -123,7 +123,7 @@
     <dependency>
       <groupId>me.ou</groupId>
       <artifactId>library</artifactId>
-      <version>1.6.2</version>
+      <version>1.6.3</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -135,7 +135,7 @@
     <dependency>
       <groupId>org.bstats</groupId>
       <artifactId>bstats-bukkit</artifactId>
-      <version>1.7</version>
+      <version>2.2.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
