Stylizer 2.0.30 - Convert to gradle from maven

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-name: ${project.name}
-version: ${project.version}
-api-version: ${pl.apiver}
-description: ${project.description}
-main: ${main.class}
-author: ${pl.author}
+name: Stylizer
+version: 2.0.30
+api-version: 1.13
+description: An advanced chat/tablist plugin
+main: me.omegaweapondev.stylizer.Stylizer
+author: OmegaWeaponDev
 
 depend:
   - Vault
