Stylizer 2.0.33 - Resolve Error when trying to use the chat formats. Also Resolves error with chat colour GUI

--- a/.github/ISSUE_TEMPLATE/issue-report.yml
+++ b/.github/ISSUE_TEMPLATE/issue-report.yml
@@ -1,6 +1,9 @@
 name: Issue reports
 description: Report any issues that you encounter with Stylizer
-labels: ["type: issue"]
+title: "[Bug]: "
+labels: ["bug"]
+assignees:
+  - OmegaWeaponDev
 body:
   - type: markdown
     attributes:
