--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-name: Stylizer
-version: 2.0.31
-api-version: 1.13
+name: ${name}
 description: An advanced chat/tablist plugin
-main: me.omegaweapondev.stylizer.Stylizer
-author: OmegaWeaponDev
+version: ${version}
+api-version: ${apiVersion}
+main: ${mainClass}
+author: ${author}
 
 depend:
   - Vault
