--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,19 @@
 
 plugins {
     id 'java'
+    id 'java-library'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.1.1'
 }
 
 group = 'me.omegaweapondev'
-version = '2.0.34'
+version = '2.0.35'
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
 
 repositories {
     mavenLocal()
