--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,7 +2,7 @@
 #
 #  Welcome to Stylizer messages file.
 #
-#  Here you'll find all of the messages that you can
+#  Here you'll find all the messages that you can
 #  customize to your server needs.
 #
 #  Placeholders:
