--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Stylizer
 description: An advanced chat/tablist plugin
 version: 2.1.0
 api-version: 1.13
-main: me.omegaweapondev.stylizer.Stlyizer
+main: me.omegaweapondev.stylizer.Stylizer
 author: OmegaWeaponDev
 
 depend: [Vault]
